[project]
name = "asyncio_task_queues"
authors = [{ name = "Ben Fiola", email = "benfiola@gmail.com" }]
description = "Python asyncio-compatible distributed task queues"
readme = "README.md"
requires-python = ">=3.7"
classifiers = []
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black", "click", "fastapi", "isort", "pytest", "redis"]

[project.urls]
Source = "https://github.com/benfiola/asyncio_task_queues.git"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
